# mmcr14.online

./: .gitignore  README
backend/: CMakeLists.txt
backend/src/: CMakeLists.txt
backend/src/app/: CMakeLists.txt  main.cc
backend/src/auth/: CMakeLists.txt  service.cc  service.h
backend/src/auth/migrations/: 0001_auth_core.sql  0002_players_autoincrement.sql
backend/src/game/: CMakeLists.txt  config.h  rating_snapshot.h
backend/src/game/engine/: CMakeLists.txt  hand.h  session.cc  session.h  timer.cc  timer.h  wall.cc  wall.h
backend/src/game/hub/: CMakeLists.txt  hub.cc  hub.h  pending_session.cc  pending_session.h
backend/src/random/: CMakeLists.txt  seed.cc  seed.h
backend/src/ranking/: CMakeLists.txt  service.cc  service.h
backend/src/ranking/migrations/: 0001_rating_columns.sql
backend/src/replay/: CMakeLists.txt  manager.cc  manager.h
backend/src/server/: CMakeLists.txt  runtime.cc  runtime.h
backend/src/stats/: CMakeLists.txt  service.cc  service.h
backend/src/stats/migrations/: 0001_stats_round_entries.sql  0002_winning_hand.sql  0003_drop_fan_names_json.sql
backend/src/storage/: CMakeLists.txt  config.h  database.cc  database.h  game_record.cc  game_record.h  migration.cc  migration.h  test_support.cc  test_support.h
backend/src/util/: CMakeLists.txt  build_info.h  my_queue.h  status.cc  status.h  status_or.h
backend/tests/: CMakeLists.txt
backend/tests/golden/: CMakeLists.txt
backend/tests/integration/: CMakeLists.txt  ws_smoke.py
backend/tests/unit/: CMakeLists.txt  auth_test.cc  game_coordinator_test.cc  game_engine_test.cc  game_scoring_test.cc  hub_test.cc  lobby_test.cc  session_test.cc  smoke_test.cc  stats_test.cc  storage_test.cc
backend/tests/unit/testdata/storage_migrations/: 0001_create_test_items.sql  0002_seed_test_items.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: SceneAppearancePanel.tsx
frontend/src/game/: fontLoader.ts
frontend/src/game/scene/: DiscardHelper.ts  Display.ts  Hand.ts  MahjongScene.ts  MeldButton.ts  MeldChoices.ts  OptDisplay.ts  River.ts  Tile.ts  WaitDisplay.ts  WaitEntry.ts  constants.ts  textures.ts  types.ts
frontend/src/lib/: backend.ts  chinese.ts  replay.ts  sceneAppearance.ts  sceneBackgroundImage.ts  storage.ts  types.ts  useStoredSceneAppearance.ts
frontend/src/pages/: CalculatorPage.css  CalculatorPage.tsx  GamePage.css  GamePage.tsx  LobbyPage.tsx  PlaceholderPage.tsx  ReplayListPage.css  ReplayListPage.tsx  ReplayPage.css  ReplayPage.tsx  StatsPage.css  StatsPage.tsx
